--- a/React/src/App.css
+++ b/React/src/App.css
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Spoqa Han Sans Neo', 'Spoqa Han Sans', 'Sans-serif';
+}
